--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "breakingbad",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Leonelcode.github.io/breakignbad-api/",
+  "homepage": "https://leonelcode.github.io/breakingbad-api",
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
